# genus

./: .gitignore  404.html  README.md  TODO.md  index.html  introduction.html  print.html  requirements_dev.txt  searchindex.js  searchindex.json  setup.cfg
docs/: SUMMARY.md  book.toml
docs/reference/: chromosomes.md  operations.md  runner.md
docs/reference/operations/: elementary.md  genetic.md  meta.md
docs/src/: SUMMARY.md
docs/src/reference/: chromosomes.md
docs/usage/: examples.md  howto.md
examples/: __init__.py  __main__.py  maximize_ones.py
reference/: chromosomes.html  operations.html  runner.html
reference/operations/: elementary.html  genetic.html  meta.html
src/genus/: __init__.py  chromosome.py  exceptions.py  population.py  types.py
src/genus/operations/: __init__.py  crossover.py  elementary.py  meta_operations.py  mutation.py  operation.py  selection.py  sequential.py
src/genus/ops/: __init__.py  crossover.py  elementary.py  foreach.py  meta_operations.py  mutation.py  op_lambda.py  operation.py  parallel.py  replace.py  selection.py  sequential.py
src/genus/runner/: __init__.py  runner.py
src/genus_utils/: __init__.py  console.py  logger.py
sys/: clean.sh
tests/genus/: test_chromosome.py
tests/genus/operations/: test_crossover.py  test_elitism_selection.py  test_meta_operations.py
tools/: gen_todo.sh
usage/: examples.html  howto.html
