[metadata]
name = genus
description = Genetic algorithms implementation
author = CASE
license = MIT
license_files = [LICENSE]
platforms = supported-platforms
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

# These options can be changed according to your project
[options]
packages =
    genus
    genus.operations
    genus_utils
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
genus = py.typed
genus_utils = py.typed
